rbqesabhhb qs<rnb

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -8,4 +8,10 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Rules",DevComment="")
++GameplayTagList=(Tag="Rules.KILL",DevComment="")
++GameplayTagList=(Tag="Rules.PUSH",DevComment="")
++GameplayTagList=(Tag="Rules.STOP",DevComment="")
++GameplayTagList=(Tag="Rules.WIN",DevComment="")
++GameplayTagList=(Tag="Rules.YOU",DevComment="")
 
